# turbot

./: .editorconfig  .gitignore  Cargo.toml
src/: config.rs  config_builder.rs  context.rs  dashes.rs  main.rs  message.rs  request.rs  response.rs
src/apis/: console.rs  discord.rs  mod.rs
src/apis/utils/: api.rs  iapi.rs  mod.rs
src/commands/: about.rs  channel.rs  echo.rs  hello.rs  mod.rs  root.rs
src/commands/channel/: channel.rs  list.rs  mod.rs
src/commands/utils/: command.rs  icommand.rs  mod.rs  options.rs  router.rs  subrouter.rs
