[package]
name = "rust"
version = "0.1.0"
authors = ["Nigless <nigless.gaming@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merge = "0.1.0"
toml = "0.5.8"
# serde_derive = "1.0.136"
# serde = "1.0.136"
